# nautobot_mcp

./: .env.example  .gitignore  Makefile  README.md  cookies.txt  docker-compose.yml  log
ci/: pre-commit-config.yaml
cursor/: requirements.md  roadmap.md
docs/: version_3_testing_transcript.md
services/chat-ui/: Dockerfile  app.py  app.py.backup  exporters.py  mcp_client.py  requirements.txt
services/chat-ui/templates/: index.html
services/mcp-nautobot/: Dockerfile  pyproject.toml  requirements.txt
services/mcp-nautobot/mcp_server/: __init__.py  server.py
services/mcp-nautobot/mcp_server/clients/: __init__.py  nautobot_graphql.py
services/mcp-nautobot/mcp_server/tools/: __init__.py  circuits.py  circuits_by_provider.py  devices.py  discovery.py  interfaces.py  llm_chat.py  prefixes.py
services/nautobot-init/: Dockerfile  create_token.py  init.py  startup.sh
services/seed-data/: Dockerfile  seed.py
